--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,34 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>5.0.5.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>5.0.5.RELEASE</version>
+		</dependency>
+
+		<!--dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>persistence-api</artifactId>
+			<version>1.0.2</version>
+		</dependency-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>org.springframework.orm</artifactId>
+			<version>3.0.0.CI-331</version>
+		</dependency>
+
+		<!--dependency>
+			<groupId>net.sf.hibernate</groupId>
+			<artifactId>hibernate</artifactId>
+			<version>2.1.8</version>
+		</dependency-->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.2.16.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
